# smmalloc

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml  genie.lua  smmalloc_perf01.cpp  smmalloc_perf02.cpp  smmalloc_perf_main.cpp  smmalloc_test01.cpp  smmalloc_test02.cpp  smmalloc_test_impl.inl  t.txt
.github/workflows/: build.yml
PerfTest/: PerfTestImpl.h  main.cpp
PerfTest/dlmalloc/: dlmalloc.cpp
PerfTest/hoard/: AUTHORS  NEWS  README.md  THANKS  benchmark.c
PerfTest/hoard/Heap-Layers/: README.md  TODO  heaplayers  heaplayers.h
PerfTest/hoard/Heap-Layers/examples/kingsley/: compile  libkingsley.cpp
PerfTest/hoard/Heap-Layers/heaps/: README  all.h
PerfTest/hoard/Heap-Layers/heaps/buildingblock/: adaptheap.h  all.h  boundedfreelistheap.h  chunkheap.h  coalesceheap.h  freelistheap.h
PerfTest/hoard/Heap-Layers/locks/: all.h  maclock.h  oldspinlock.h  posixlock.h  recursivelock.h  spinlock-old.h  spinlock.h  winlock.h
PerfTest/hoard/Heap-Layers/threads/: all.h  cpuinfo.cpp  cpuinfo.h  fred.h
PerfTest/hoard/Heap-Layers/utility/: align.h  all.h  bins.h  bins16k.h  bins4k.h  bins64k.h  bins8k.h  checkpoweroftwo.h  dllist.h  dynarray.h  exactlyone.h  freesllist.h  gcd.h  guard.h  hash.h  ilog2.cpp  ilog2.h  istrue.h  lcm.h  modulo.h  myhashmap.h  sassert.h  singleton.h  sllist.h  testalign.cpp  timer-old.h  timer.h
PerfTest/hoard/Heap-Layers/wrappers/: all.h  ansiwrapper.h  gnuwrapper-hooks.cpp  gnuwrapper.cpp  macinterpose.h  macwrapper.cpp  mallocinfo.h  mmapwrapper.h  stlallocator.h  winwrapper.cpp  wrapper.cpp  x86jump.h
PerfTest/hoard/include/: README  VERSION.h
PerfTest/hoard/include/hoard/: README  basehoardmanager.h  debugprint.h  emptyclass.h  emptyhoardmanager.h  geometricsizeclass.cpp  geometricsizeclass.h  globalheap.h  heapmanager.h  hoardconstants.h  hoardheap.h  hoardmanager.h  hoardsuperblock.h  hoardsuperblockheader.h  hoardtlab.h  processheap.h  redirectfree.h  statistics.h  thresholdheap.h  thresholdsegheap.h
PerfTest/hoard/include/superblocks/: addheaderheap.h  alignedsuperblockheap.h  ignoreinvalidfree.h  manageonesuperblock.h  tlab.h
PerfTest/hoard/include/util/: alignedmmap.h  array.h  bumpalloc.h  check.h  conformantheap.h  dynamichashtable.cpp  dynamichashtable.h  fixedrequestheap.h  lockmallocheap.h  mmapalloc.h  releaseheap.h  threadpoolheap.h
PerfTest/hoard/source/: libhoard.cpp  mactls.cpp  unixtls.cpp  uselibhoard.cpp  wintls.cpp
PerfTest/ltalloc/: README.md  ltalloc.cc  ltalloc.h.new
PerfTest/ltalloc/gnu.make.lib/: Makefile
PerfTest/rpmalloc/: rpmalloc.c  rpmalloc.h
SmMalloc/: CMakeLists.txt  smmalloc.cpp  smmalloc.h  smmalloc_generic.cpp  smmalloc_tls.cpp
Tests/: MtTests.cpp  SimpleTests.cpp  main.cpp
(+55 files in other folders)
